Completo el resumen del segundo libro

--- a/lp02.md
+++ b/lp02.md
@@ -2,3 +2,6 @@
 
 Desde que en *Matrix* hubo un bug, la escuela se encuentra asediada por un virus
 contra el que **Larry** y sus amigos deberán luchar.
+
+Como el malvado hacker le metión un troyeno en su propio código podía contener mallware
+
